Migration to AndroidX

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -25,7 +25,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ui.MainActivity" />
+
+        <activity
+            android:name=".ui.MainActivity"
+            android:screenOrientation="sensorLandscape"
+            />
+
         <activity
             android:name=".ui.JoystickActivity"
             android:screenOrientation="sensorLandscape"
