--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -8,7 +8,6 @@
 
     <application
         android:allowBackup="true"
-        android:fullBackupContent="true"
         android:icon="@drawable/logo_transparent_noir"
         android:label="@string/app_name"
         android:supportsRtl="true"
@@ -18,7 +17,8 @@
 
         <activity
             android:name=".ui.SplashActivity"
-            android:theme="@style/AppTheme.Splash">
+            android:theme="@style/AppTheme.Splash"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
